--- a/public/index.html
+++ b/public/index.html
@@ -1,128 +1,159 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PetTouch - علامات NFC الذكيه لحيواناتك الأليفة</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PetTouch - علامات NFC الذكية لحيواناتك الأليفة</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        body {
+            font-family: 'Cairo', sans-serif;
+        }
+
+        .hero {
+            background-image: url('img/hero-bg.jpg');
+            background-size: cover;
+            background-position: center;
+        }
+
+        .btn-primary {
+            background-color: #6a11cb;
+            background-image: linear-gradient(315deg, #6a11cb 0%, #2575fc 74%);
+        }
+
+        .btn-primary:hover {
+            background-image: linear-gradient(315deg, #5b0eb9 0%, #1d63e2 74%);
+        }
+
+        .text-gradient {
+            background: linear-gradient(to right, #6a11cb, #2575fc);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+    </style>
 </head>
-<body class="bg-gray-100 font-sans">
-  <header class="bg-gradient-to-r from-purple-600 to-indigo-600 text-white py-4 shadow-lg">
-    <div class="container mx-auto flex justify-between items-center px-4">
-      <div class="flex items-center">
-        <img src="img/logo.png" alt="PetTouch Logo" class="h-12 mr-3">
-        <h1 class="text-2xl font-bold">PetTouch</h1>
-      </div>
-      <nav class="flex space-x-4 space-x-reverse">
-        <a href="subscribe.html" class="hover:text-gray-200">الاشتراك</a>
-        <a href="report.html" class="hover:text-gray-200">التبليغ عن حيوان</a>
-        <a href="#" id="loginBtn" class="hover:text-gray-200">تسجيل الدخول</a>
-      </nav>
-    </div>
-  </header>
 
-  <main>
-    <!-- Hero Section -->
-    <section class="relative bg-cover bg-center h-96" style="background-image: url('img/hero-bg.jpg');">
-      <div class="absolute inset-0 bg-black opacity-50"></div>
-      <div class="container mx-auto h-full flex items-center justify-center text-center text-white relative z-10">
-        <div>
-          <h2 class="text-4xl font-bold mb-4">حافظ على أمان حيوانك الأليف مع PetTouch</h2>
-          <p class="text-lg mb-6">علامات NFC ذكية تحمل بيانات حيوانك وتتيح التواصل معك بسهولة.</p>
-          <a href="subscribe.html" class="bg-purple-600 text-white px-6 py-3 rounded-full hover:bg-purple-700">اطلب الآن</a>
+<body class="bg-gray-100">
+    <header class="bg-gradient-to-r from-indigo-700 to-purple-700 text-white py-4 shadow-md">
+        <div class="container mx-auto flex justify-between items-center px-4">
+            <div class="flex items-center">
+                <img src="img/logo.png" alt="PetTouch Logo" class="h-12 ml-3">
+                <h1 class="text-2xl font-bold">PetTouch</h1>
+            </div>
+            <nav class="flex flex-row-reverse space-x-reverse space-x-4">
+                <a href="subscribe.html" class="hover:text-gray-200">الاشتراك</a>
+                <a href="report.html" class="hover:text-gray-200">تبليغ</a>
+                <a href="#" onclick="alert('قريباً!')" class="hover:text-gray-200">المدونة</a>
+                <a href="#" onclick="alert('قريباً!')" class="hover:text-gray-200">حول</a>
+            </nav>
         </div>
-      </div>
-    </section>
+    </header>
 
-    <!-- Features Section -->
-    <section class="container mx-auto py-12">
-      <h3 class="text-3xl font-bold text-center mb-8">لماذا تختار PetTouch؟</h3>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-        <div class="bg-white p-6 rounded-lg shadow-md text-center">
-          <img src="img/pet001.jpg" alt="Waterproof Tag" class="h-32 mx-auto mb-4 rounded-full">
-          <h4 class="text-xl font-semibold mb-2">علامة مقاومة للماء</h4>
-          <p>علاماتنا متينة وتتحمل الظروف الجوية القاسية.</p>
+    <main>
+        <section class="hero py-20 text-white">
+            <div class="container mx-auto text-center">
+                <h2 class="text-4xl font-bold mb-6 text-white">حماية حيواناتك الأليفة أصبح أسهل</h2>
+                <p class="text-xl mb-8">مع PetTouch، يمكنك تتبع حيواناتك الأليفة والعثور عليها بسرعة إذا ضاعت.</p>
+                <a href="subscribe.html"
+                    class="btn-primary text-white font-bold py-3 px-8 rounded-full inline-block transition">ابدأ الآن</a>
+            </div>
+        </section>
+
+        <section class="features bg-white py-14">
+            <div class="container mx-auto text-center">
+                <h2 class="text-3xl font-bold mb-10 text-gradient">الميزات الرئيسية</h2>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-10 px-4">
+                    <div class="bg-gray-50 p-6 rounded-lg shadow hover:shadow-lg transition">
+                        <i class="fas fa-map-marker-alt fa-3x text-indigo-600 mb-4"></i>
+                        <h3 class="text-xl font-bold mb-2">تتبع الموقع</h3>
+                        <p class="text-gray-700">اعرف مكان حيوانك الأليف باستخدام تقنية NFC و GPS.</p>
+                    </div>
+                    <div class="bg-gray-50 p-6 rounded-lg shadow hover:shadow-lg transition">
+                        <i class="fas fa-id-card fa-3x text-indigo-600 mb-4"></i>
+                        <h3 class="text-xl font-bold mb-2">ملف تعريف الحيوان</h3>
+                        <p class="text-gray-700">احفظ كل معلومات حيوانك في مكان واحد يسهل الوصول إليه.</p>
+                    </div>
+                    <div class="bg-gray-50 p-6 rounded-lg shadow hover:shadow-lg transition">
+                        <i class="fas fa-bell fa-3x text-indigo-600 mb-4"></i>
+                        <h3 class="text-xl font-bold mb-2">إشعارات فورية</h3>
+                        <p class="text-gray-700">تنبيهات فورية إذا ابتعد الحيوان عن المنطقة المحددة.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="pricing bg-gray-100 py-14">
+            <div class="container mx-auto text-center">
+                <h2 class="text-3xl font-bold mb-10 text-gradient">خطط الاشتراك</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 px-4">
+                    <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition">
+                        <h3 class="text-2xl font-bold mb-3">الأساسية</h3>
+                        <p class="text-4xl font-bold mb-4 text-indigo-600">60$/سنة</p>
+                        <ul class="text-right mb-4">
+                            <li>1 علامة NFC</li>
+                            <li>ملف تعريف واحد</li>
+                            <li>دعم أساسي</li>
+                        </ul>
+                        <a href="subscribe.html"
+                            class="btn-primary text-white px-4 py-2 rounded-full inline-block">اشترك الآن</a>
+                    </div>
+                    <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition">
+                        <h3 class="text-2xl font-bold mb-3">المميزة</h3>
+                        <p class="text-4xl font-bold mb-4 text-indigo-600">120$/سنة</p>
+                        <ul class="text-right mb-4">
+                            <li>4 علامات NFC</li>
+                            <li>ملفات متعددة</li>
+                            <li>دعم 24/7</li>
+                        </ul>
+                        <a href="subscribe.html"
+                            class="btn-primary text-white px-4 py-2 rounded-full inline-block">اشترك الآن</a>
+                    </div>
+                    <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition">
+                        <h3 class="text-2xl font-bold mb-3">العائلية</h3>
+                        <p class="text-4xl font-bold mb-4 text-indigo-600">200$/سنة</p>
+                        <ul class="text-right mb-4">
+                            <li>10 علامات NFC</li>
+                            <li>ملفات غير محدودة</li>
+                            <li>دعم VIP</li>
+                        </ul>
+                        <a href="subscribe.html"
+                            class="btn-primary text-white px-4 py-2 rounded-full inline-block">اشترك الآن</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="container mx-auto py-12 text-center px-4">
+            <h3 class="text-3xl font-bold mb-6">تواصل معنا</h3>
+            <p class="text-lg mb-4">لأي استفسار، تواصل معنا عبر:</p>
+            <p class="mb-3"><i class="fas fa-envelope text-indigo-600 ml-2"></i><a
+                    href="mailto:info@pettouch.com" class="text-indigo-700 hover:underline">info@pettouch.com</a></p>
+            <p><i class="fas fa-phone text-indigo-600 ml-2"></i><a href="tel:+1234567890"
+                    class="text-indigo-700 hover:underline">+1234567890</a></p>
+        </section>
+    </main>
+
+    <footer class="bg-indigo-900 text-white py-6">
+        <div class="container mx-auto text-center">
+            <p>&copy; 2025 PetTouch. جميع الحقوق محفوظة.</p>
         </div>
-        <div class="bg-white p-6 rounded-lg shadow-md text-center">
-          <img src="img/pet002.jpg" alt="Pet Profile" class="h-32 mx-auto mb-4 rounded-full">
-          <h4 class="text-xl font-semibold mb-2">ملف مخصص لكل حيوان</h4>
-          <p>صفحة خاصة تحتوي على كل تفاصيل حيوانك الأليف.</p>
-        </div>
-        <div class="bg-white p-6 rounded-lg shadow-md text-center">
-          <img src="img/hero-bg.jpg" alt="Location Sharing" class="h-32 mx-auto mb-4 rounded-full">
-          <h4 class="text-xl font-semibold mb-2">مشاركة الموقع</h4>
-          <p>إرسال موقع الحيوان فور العثور عليه بسهولة.</p>
-        </div>
-      </div>
-    </section>
+    </footer>
 
-    <!-- Subscriptions Section -->
-    <section class="bg-gray-200 py-12">
-      <div class="container mx-auto text-center">
-        <h3 class="text-3xl font-bold mb-8">اختر خطتك المفضلة</h3>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-          <div class="bg-white p-6 rounded-lg shadow-md">
-            <h4 class="text-xl font-semibold mb-2">الباقة الأساسية</h4>
-            <p class="text-2xl font-bold mb-4">50 دولار/سنة</p>
-            <ul class="text-right mb-4">
-              <li>علامة NFC واحدة</li>
-              <li>ملف حيوان أساسي</li>
-              <li>دعم عبر البريد الإلكتروني</li>
-            </ul>
-            <a href="subscribe.html" class="bg-purple-600 text-white px-4 py-2 rounded-full hover:bg-purple-700">اشترك الآن</a>
-          </div>
-          <div class="bg-white p-6 rounded-lg shadow-md">
-            <h4 class="text-xl font-semibold mb-2">الباقة المميزة</h4>
-            <p class="text-2xl font-bold mb-4">80 دولار/سنة</p>
-            <ul class="text-right mb-4">
-              <li>علامتين NFC</li>
-              <li>ملف حيوان متقدم</li>
-              <li>دعم عبر الهاتف</li>
-            </ul>
-            <a href="subscribe.html" class="bg-purple-600 text-white px-4 py-2 rounded-full hover:bg-purple-700">اشترك الآن</a>
-          </div>
-          <div class="bg-white p-6 rounded-lg shadow-md">
-            <h4 class="text-xl font-semibold mb-2">الباقة العائلية</h4>
-            <p class="text-2xl font-bold mb-4">120 دولار/سنة</p>
-            <ul class="text-right mb-4">
-              <li>4 علامات NFC</li>
-              <li>ملفات حيوانات متعددة</li>
-              <li>دعم أولوية 24/7</li>
-            </ul>
-            <a href="subscribe.html" class="bg-purple-600 text-white px-4 py-2 rounded-full hover:bg-purple-700">اشترك الآن</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section class="container mx-auto py-12 text-center">
-      <h3 class="text-3xl font-bold mb-8">تواصل معنا</h3>
-      <p class="text-lg mb-4">لأي استفسارات، تواصلوا معنا عبر البريد الإلكتروني أو الهاتف.</p>
-      <p class="mb-4">البريد: <a href="mailto:info@pettouch.com" class="text-purple-600">info@pettouch.com</a></p>
-      <p>الهاتف: <a href="tel:+1234567890" class="text-purple-600">+1234567890</a></p>
-    </section>
-  </main>
-
-  <footer class="bg-gray-800 text-white py-6">
-    <div class="container mx-auto text-center">
-      <p>&copy; 2025 PetTouch. جميع الحقوق محفوظة.</p>
-    </div>
-  </footer>
-
-  <script>
-    netlifyIdentity.init();
-    document.getElementById("loginBtn").addEventListener("click", () => netlifyIdentity.open());
-    netlifyIdentity.on("login", user => {
-      if (user.email === "mo3tazaky@hotmail.com") {
-        window.location.href = "dashboard.html";
-      } else {
-        alert("مرحبًا! حسابك نشط، ولوحة تحكم المستخدم قيد التطوير.");
-      }
-    });
-  </script>
+    <script>
+        if (window.netlifyIdentity) {
+            window.netlifyIdentity.on("init", user => {
+                if (!user) {
+                    window.netlifyIdentity.on("login", () => document.location.href = "/admin/");
+                }
+            });
+        }
+    </script>
 </body>
+
 </html>
