--- a/public/pet001.html
+++ b/public/pet001.html
@@ -1,106 +1,160 @@
 <!DOCTYPE html>
 <html lang="ar">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="عرض بيانات حيوان أليف باستخدام علامة NFC">
-  <title>بيانات الحيوان - PetTouch</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel行了
-
-System: It looks like the response was cut off while providing the code for `pet001.html`. I'll complete the response by providing the full code for `pet001.html`, followed by `pet002.html` (since it’s similar but with a different `petId`), and then continue with the remaining configuration files (`style.css`, `.env`, `.gitignore`, `netlify.toml`, `package.json`). After that, I’ll provide a detailed step-by-step guide on how to set up and deploy the project to GitHub and Netlify.
-
-### **Continuation of the Code**
-
-#### **pet001.html**
-- **Purpose**: Displays details of a specific pet (Miki) based on `petId = pet001`.
-
-<xaiArtifact artifact_id="328bb317-d6aa-4c0d-b81a-000b9c8d6301" artifact_version_id="ee865da2-af80-48f5-870a-35559880e300" title="pet001.html" contentType="text/html">
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="عرض بيانات حيوان أليف باستخدام علامة NFC">
-  <title>بيانات الحيوان - PetTouch</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-</head>
-<body class="bg-gray-100 font-sans">
-  <header class="bg-gradient-to-r from-purple-600 to-indigo-600 text-white py-4 shadow-lg">
-    <div class="container mx-auto flex justify-between items-center px-4">
-      <div class="flex items-center">
-        <img src="img/logo.png" alt="PetTouch Logo" class="h-12 mr-3">
-        <h1 class="text-2xl font-bold">PetTouch</h1>
-      </div>
-      <nav class="flex space-x-4 space-x-reverse">
-        <a href="index.html" class="hover:text-gray-200">الرئيسية</a>
-        <a href="report.html" class="hover:text-gray-200">التبليغ</a>
-        <a href="subscribe.html" class="hover:text-gray-200">الاشتراك</a>
-      </nav>
-    </div>
-  </header>
-
-  <main class="container mx-auto py-12">
-    <section class="bg-white p-6 rounded-lg shadow-md">
-      <h2 class="text-2xl font-bold mb-6 text-center">بيانات الحيوان</h2>
-      <div id="petDetails" class="space-y-4">
-        <img id="petImage" src="https://via.placeholder.com/300x200.png?text=Loading..." alt="صورة الحيوان" class="w-full h-64 object-cover rounded-lg">
-        <p><strong>الاسم:</strong> <span id="petName">جاري التحميل...</span></p>
-        <p><strong>النوع:</strong> <span id="petType">جاري التحميل...</span></p>
-        <p><strong>السلالة:</strong> <span id="petBreed">جاري التحميل...</span></p>
-        <p><strong>العمر:</strong> <span id="petAge">جاري التحميل...</span></p>
-        <p><strong>الحالة الصحية:</strong> <span id="petHealth">جاري التحميل...</span></p>
-        <p><strong>المالك:</strong> <span id="petOwner">جاري التحميل...</span></p>
-        <p><strong>رقم التواصل:</strong> <span id="petContact">جاري التحميل...</span></p>
-        <p><strong>العنوان:</strong> <span id="petAddress">جاري التحميل...</span></p>
-      </div>
-    </section>
-  </main>
-
-  <footer class="bg-gray-800 text-white py-6">
-    <div class="container mx-auto text-center">
-      <p>© 2025 PetTouch. جميع الحقوق محفوظة.</p>
-    </div>
-  </footer>
-
-  <script>
-    async function loadPetData() {
-      try {
-        const response = await fetch('/.netlify/functions/get-pet', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ petId: 'pet001' })
-        });
-        const pet = await response.json();
-        if (response.ok) {
-          document.getElementById('petImage').src = pet.image_url;
-          document.getElementById('petName').textContent = pet.name;
-          document.getElementById('petType').textContent = pet.type;
-          document.getElementById('petBreed').textContent = pet.breed;
-          document.getElementById('petAge').textContent = pet.age;
-          document.getElementById('petHealth').textContent = pet.health;
-          document.getElementById('petOwner').textContent = pet.owner;
-          document.getElementById('petContact').textContent = pet.contact;
-          document.getElementById('petAddress').textContent = pet.address;
-        } else {
-          throw new Error(pet.error);
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="عرض بيانات حيوان أليف باستخدام علامة NFC">
+    <title>بيانات الحيوان - PetTouch</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <style>
+        .pet-details-container {
+            max-width: 600px;
+            margin: 2rem auto;
+            background-color: white;
+            padding: 1.5rem;
+            border-radius: 0.5rem;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
         }
-      } catch (error) {
-        Toastify({
-          text: "حدث خطأ أثناء تحميل بيانات الحيوان!",
-          duration: 3000,
-          gravity: "top",
-          position: "right",
-          backgroundColor: "#e11d48",
-        }).showToast();
-      }
-    }
 
-    loadPetData();
-  </script>
+        .pet-image {
+            max-height: 300px;
+            object-fit: cover;
+            border-radius: 0.5rem;
+            margin-bottom: 1rem;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .pet-image:hover {
+            transform: scale(1.05);
+        }
+
+        .pet-detail {
+            margin-bottom: 0.75rem;
+        }
+
+        .pet-detail strong {
+            font-weight: bold;
+            margin-left: 0.5rem;
+        }
+
+        .report-button {
+            background-color: #EF4444;
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: 0.375rem;
+            transition: background-color 0.2s ease-in-out;
+        }
+
+        .report-button:hover {
+            background-color: #DC2626;
+        }
+
+        .contact-info {
+            margin-top: 1rem;
+            padding: 1rem;
+            background-color: #F9FAFB;
+            border-radius: 0.5rem;
+        }
+
+        .contact-info p {
+            margin-bottom: 0.5rem;
+        }
+    </style>
+</head>
+
+<body class="bg-gray-100 font-sans">
+    <header class="bg-gradient-to-r from-purple-600 to-indigo-600 text-white py-4 shadow-lg">
+        <div class="container mx-auto flex justify-between items-center px-4">
+            <div class="flex items-center">
+                <img src="img/logo.png" alt="PetTouch Logo" class="h-12 mr-3">
+                <h1 class="text-2xl font-bold">بيانات الحيوان</h1>
+            </div>
+            <nav class="flex space-x-4 space-x-reverse">
+                <a href="index.html" class="hover:text-gray-200">الرئيسية</a>
+                <a href="user-dashboard.html" class="hover:text-gray-200">لوحة التحكم</a>
+                <a href="report.html" class="hover:text-gray-200">التبليغ</a>
+            </nav>
+        </div>
+    </header>
+
+    <main class="container mx-auto py-8">
+        <div class="pet-details-container">
+            <img id="petImage" src="" alt="صورة الحيوان" class="pet-image">
+            <div class="pet-detail"><strong>اسم الحيوان:</strong> <span id="petName"></span></div>
+            <div class="pet-detail"><strong>نوع الحيوان:</strong> <span id="petType"></span></div>
+            <div class="pet-detail"><strong>سلالة الحيوان:</strong> <span id="petBreed"></span></div>
+            <div class="pet-detail"><strong>عمر الحيوان:</strong> <span id="petAge"></span></div>
+            <div class="pet-detail"><strong>الحالة الصحية:</strong> <span id="petHealth"></span></div>
+            <div class="contact-info">
+                <p><strong>اسم المالك:</strong> <span id="petOwner"></span></p>
+                <p><strong>معلومات الاتصال:</strong> <span id="petContact"></span></p>
+                <p><strong>عنوان المالك:</strong> <span id="petAddress"></span></p>
+            </div>
+            <button onclick="reportLost()" class="report-button">إبلاغ عن الفقد</button>
+        </div>
+    </main>
+
+    <footer class="bg-gray-800 text-white py-6">
+        <div class="container mx-auto text-center">
+            <p>© 2025 PetTouch. جميع الحقوق محفوظة.</p>
+        </div>
+    </footer>
+
+    <script>
+        async function loadPetData() {
+            try {
+                const response = await fetch('/.netlify/functions/get-pet', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        petId: 'pet001'
+                    })
+                });
+                const pet = await response.json();
+                if (response.ok) {
+                    document.getElementById('petImage').src = pet.image_url;
+                    document.getElementById('petName').textContent = pet.name;
+                    document.getElementById('petType').textContent = pet.type;
+                    document.getElementById('petBreed').textContent = pet.breed;
+                    document.getElementById('petAge').textContent = pet.age;
+                    document.getElementById('petHealth').textContent = pet.health;
+                    document.getElementById('petOwner').textContent = pet.owner;
+                    document.getElementById('petContact').textContent = pet.contact;
+                    document.getElementById('petAddress').textContent = pet.address;
+                } else {
+                    throw new Error(pet.error);
+                }
+            } catch (error) {
+                Toastify({
+                    text: "حدث خطأ أثناء تحميل بيانات الحيوان!",
+                    duration: 3000,
+                    gravity: "top",
+                    position: "right",
+                    backgroundColor: "#e11d48",
+                }).showToast();
+            }
+        }
+
+        function reportLost() {
+            // Implement the logic to report the pet as lost, e.g., redirect to report.html
+            window.location.href = 'report.html';
+        }
+
+        loadPetData();
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script>
+        const SUPABASE_URL = "YOUR_SUPABASE_URL";
+        const SUPABASE_ANON_KEY = "YOUR_SUPABASE_ANON_KEY";
+        const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+    </script>
 </body>
+
 </html>
