--- a/public/report.html
+++ b/public/report.html
@@ -1,122 +1,156 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="التبليغ عن حيوان أليف مفقود باستخدام علامة NFC">
-  <title>التبليغ عن حيوان - PetTouch</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>التبليغ عن حيوان مفقود أو تم العثور عليه - PetTouch</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <style>
+        #map {
+            height: 300px;
+            border-radius: 0.5rem;
+            margin-bottom: 1rem;
+        }
+
+        .form-input {
+            width: 100%;
+            padding: 0.5rem;
+            border: 1px solid #D1D5DB;
+            border-radius: 0.375rem;
+            margin-bottom: 0.75rem;
+        }
+
+        .form-label {
+            display: block;
+            margin-bottom: 0.5rem;
+            color: #374151;
+            font-weight: 500;
+        }
+
+        .btn-primary {
+            background-color: #EF4444;
+            color: white;
+            padding: 0.75rem 1.5rem;
+            border-radius: 0.375rem;
+            font-weight: 600;
+            transition: background-color 0.2s ease-in-out;
+        }
+
+        .btn-primary:hover {
+            background-color: #DC2626;
+        }
+
+        .card {
+            background-color: white;
+            border-radius: 0.5rem;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            padding: 1.5rem;
+        }
+
+        .report-option {
+            border: 1px solid #D1D5DB;
+            border-radius: 0.375rem;
+            padding: 1rem;
+            margin-bottom: 1rem;
+            cursor: pointer;
+            transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+        }
+
+        .report-option:hover {
+            border-color: #8B5CF6;
+            box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+        }
+
+        .report-form {
+            display: none;
+        }
+    </style>
 </head>
+
 <body class="bg-gray-100 font-sans">
-  <header class="bg-gradient-to-r from-purple-600 to-indigo-600 text-white py-4 shadow-lg">
-    <div class="container mx-auto flex justify-between items-center px-4">
-      <div class="flex items-center">
-        <img src="img/logo.png" alt="PetTouch Logo" class="h-12 mr-3">
-        <h1 class="text-2xl font-bold">PetTouch</h1>
-      </div>
-      <nav class="flex space-x-4 space-x-reverse">
-        <a href="index.html" class="hover:text-gray-200">الرئيسية</a>
-        <a href="subscribe.html" class="hover:text-gray-200">الاشتراك</a>
-      </nav>
-    </div>
-  </header>
-
-  <main class="container mx-auto py-12">
-    <section class="bg-white p-6 rounded-lg shadow-md">
-      <h2 class="text-2xl font-bold mb-6 text-center">التبليغ عن حيوان مفقود</h2>
-      <form id="reportForm" class="space-y-4">
-        <div>
-          <label for="nfcId" class="block text-sm font-medium text-gray-700">رقم علامة NFC</label>
-          <input type="text" id="nfcId" name="nfcId" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-purple-500 focus:border-purple-500" required>
+    <header class="bg-gradient-to-r from-purple-600 to-indigo-600 text-white py-4 shadow-lg">
+        <div class="container mx-auto flex justify-between items-center px-4">
+            <div class="flex items-center">
+                <img src="img/logo.png" alt="PetTouch Logo" class="h-12 mr-3">
+                <h1 class="text-2xl font-bold">التبليغ عن حيوان</h1>
+            </div>
+            <nav class="flex space-x-4 space-x-reverse">
+                <a href="index.html" class="hover:text-gray-200">الرئيسية</a>
+                <a href="user-dashboard.html" class="hover:text-gray-200">لوحة التحكم</a>
+                <a href="login.html" class="hover:text-gray-200">تسجيل الدخول</a>
+            </nav>
         </div>
-        <div>
-          <label for="details" class="block text-sm font-medium text-gray-700">تفاصيل التقرير</label>
-          <textarea id="details" name="details" rows="4" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-purple-500 focus:border-purple-500"></textarea>
+    </header>
+
+    <main class="container mx-auto py-8">
+        <div class="max-w-lg mx-auto">
+            <div class="card mb-8">
+                <h2 class="text-xl font-semibold mb-4">كيف تريد التبليغ؟</h2>
+                <div class="report-option" onclick="showNfcReportForm()">
+                    <h3 class="font-semibold">تبليغ باستخدام علامة NFC</h3>
+                    <p class="text-gray-600">إذا كان الحيوان يحمل علامة PetTouch، قم بمسحها هنا.</p>
+                </div>
+                <div class="report-option" onclick="showNoNfcReportForm()">
+                    <h3 class="font-semibold">تبليغ بدون علامة NFC</h3>
+                    <p class="text-gray-600">إذا عثرت على حيوان لا يحمل علامة، يمكنك التبليغ عنه هنا.</p>
+                </div>
+            </div>
+
+            <div id="nfc-report-form" class="card report-form">
+                <h2 class="text-xl font-semibold mb-4">تبليغ عن حيوان مفقود (باستخدام NFC)</h2>
+                <form id="report-form-nfc">
+                    <div>
+                        <label for="nfc_id" class="form-label">رقم تعريف NFC</label>
+                        <input type="text" id="nfc_id" name="nfc_id" class="form-input" required>
+                    </div>
+                    <div>
+                        <label for="details" class="form-label">تفاصيل إضافية</label>
+                        <textarea id="details" name="details" rows="4" class="form-input"></textarea>
+                    </div>
+                    <div>
+                        <button type="submit" class="btn btn-primary">إرسال التبليغ</button>
+                    </div>
+                    <p id="nfc-report-message" class="mt-4 text-sm text-gray-600"></p>
+                </form>
+            </div>
+
+            <div id="no-nfc-report-form" class="card report-form">
+                <h2 class="text-xl font-semibold mb-4">تبليغ عن حيوان تم العثور عليه (بدون NFC)</h2>
+                <form id="report-form-no-nfc">
+                    <div>
+                        <label for="found_photo" class="form-label">صورة الحيوان (اختياري)</label>
+                        <input type="file" id="found_photo" name="found_photo" class="form-input">
+                    </div>
+                    <div>
+                        <label for="found_location" class="form-label">موقع العثور</label>
+                        <input type="text" id="found_location" name="found_location" class="form-input" required>
+                    </div>
+                    <div id="map" class="mb-2"></div>
+                    <div>
+                        <label for="reporter_phone" class="form-label">رقم هاتفك</label>
+                        <input type="tel" id="reporter_phone" name="reporter_phone" class="form-input" required>
+                    </div>
+                    <div>
+                        <label for="found_details" class="form-label">تفاصيل إضافية عن الحيوان</label>
+                        <textarea id="found_details" name="found_details" rows="4" class="form-input"
+                            required></textarea>
+                    </div>
+                    <div>
+                        <button type="submit" class="btn btn-primary">إرسال التبليغ</button>
+                    </div>
+                    <p id="no-nfc-report-message" class="mt-4 text-sm text-gray-600"></p>
+                </form>
+            </div>
         </div>
-        <div>
-          <label class="block text-sm font-medium text-gray-700">الموقع</label>
-          <div id="map" class="h-64 w-full rounded-md"></div>
-        </div>
-        <button type="submit" class="w-full bg-purple-600 text-white px-4 py-2 rounded-full hover:bg-purple-700">إرسال التقرير</button>
-      </form>
-    </section>
-  </main>
+    </main>
 
-  <footer class="bg-gray-800 text-white py-6">
-    <div class="container mx-auto text-center">
-      <p>© 2025 PetTouch. جميع الحقوق محفوظة.</p>
-    </div>
-  </footer>
-
-  <script>
-    let map, marker;
-
-    function initMap() {
-      map = L.map('map').setView([30.0444, 31.2357], 13);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-      }).addTo(map);
-      map.on('click', function (e) {
-        if (marker) map.removeLayer(marker);
-        marker = L.marker([e.latlng.lat, e.latlng.lng]).addTo(map);
-      });
-    }
-
-    document.getElementById('reportForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      try {
-        const nfcId = document.getElementById('nfcId').value;
-        const details = document.getElementById('details').value;
-        const location = marker ? { lat: marker.getLatLng().lat, lng: marker.getLatLng().lng } : null;
-
-        if (!location) {
-          Toastify({
-            text: "يرجى تحديد موقع على الخريطة!",
-            duration: 3000,
-            gravity: "top",
-            position: "right",
-            backgroundColor: "#e11d48",
-          }).showToast();
-          return;
-        }
-
-        const response = await fetch('/.netlify/functions/submit-report', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ nfcId, details, location })
-        });
-        const result = await response.json();
-        if (response.ok) {
-          Toastify({
-            text: "تم إرسال التقرير بنجاح!",
-            duration: 3000,
-            gravity: "top",
-            position: "right",
-            backgroundColor: "#7c3aed",
-          }).showToast();
-          document.getElementById('reportForm').reset();
-          if (marker) map.removeLayer(marker);
-        } else {
-          throw new Error(result.error);
-        }
-      } catch (error) {
-        Toastify({
-          text: "حدث خطأ أثناء إرسال التقرير!",
-          duration: 3000,
-          gravity: "top",
-          position: "right",
-          backgroundColor: "#e11d48",
-        }).showToast();
-      }
-    });
-
-    initMap();
-  </script>
-</body>
-</html>
+    <footer class="bg-gray-800 text-white py-6">
+        <div class="container mx-auto text-center">
+            <p>©
