--- a/public/subscribe.html
+++ b/public/subscribe.html
@@ -182,8 +182,8 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script>
-        const SUPABASE_URL = "YOUR_SUPABASE_URL";
-        const SUPABASE_ANON_KEY = "YOUR_SUPABASE_ANON_KEY";
+        const SUPABASE_URL = "https://etlzuamrufdhslnjicxi.supabase.co";
+        const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImV0bHp1YW1ydWZkaHNsbmppY3hpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDYxNDQwNTUsImV4cCI6MjA2MTcyMDA1NX0.IaAz5dpS6ImvZHBL43lywa43aDmcxYbeWlsQ9T-Fj2E";
         const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
     </script>
 </body>
